vlib/v/checker/tests/fn_init_sig.out
vlib/v/checker/tests/fn_init_sig.vv:1:1: error: fn `init` cannot have a return type
    1 | fn init() int {
      | ~~~~~~~~~~~~~
    2 |     return 1
    3 | }
vlib/v/checker/tests/fn_init_sig.vv:4:1: error: fn `init` must not be public
    2 |     return 1
    3 | }
    4 | pub fn init() int {
      | ~~~~~~~~~~~~~~~~~
    5 |     return 1
    6 | }
