vlib/v/checker/tests/fn_init_sig.vv
fn init() int {
    return 1
}
pub fn init() int {
    return 1
}
